--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.pyc
 
 # C extensions
 *.so
@@ -163,3 +164,6 @@ cython_debug/
 # pixi environments
 .pixi
 *.egg-info
+*.mp4
+*.csd
+*._*
