--- a/pixi.toml
+++ b/pixi.toml
@@ -20,3 +20,19 @@ pre-commit = ">=3.8.0,<4"
 pytest = ">=8.3.2,<9"
 hypothesis = ">=6.111.2,<7"
 cookiecutter = ">=2.6.0,<3"
+jupyter = ">=1.1.1,<2"
+dlib = ">=19.24.6,<20"
+imutils = ">=0.5.4,<0.6"
+keras = ">=3.5.0,<4"
+scikit-learn = ">=1.5.2,<2"
+torchvision = ">=0.19.0,<0.20"
+pillow = ">=10.4.0,<11"
+pydub = ">=0.25.1,<0.26"
+transformers = ">=4.41.2,<5"
+pandas = ">=2.2.2,<3"
+moviepy = ">=1.0.3,<2"
+
+[pypi-dependencies]
+torchaudio = ">=2.4.0, <3"
+opencv-python = "*"
+pyaudioanalysis = ">=0.2.5, <0.3"
