--- a/pixi.toml
+++ b/pixi.toml
@@ -31,6 +31,7 @@ pydub = ">=0.25.1,<0.26"
 transformers = ">=4.41.2,<5"
 pandas = ">=2.2.2,<3"
 moviepy = ">=1.0.3,<2"
+nvtop = ">=3.1.0,<4"
 
 [pypi-dependencies]
 torchaudio = ">=2.4.0, <3"
