--- a/pixi.toml
+++ b/pixi.toml
@@ -32,6 +32,7 @@ transformers = ">=4.41.2,<5"
 pandas = ">=2.2.2,<3"
 moviepy = ">=1.0.3,<2"
 nvtop = ">=3.1.0,<4"
+lua = ">=5.4.6,<6"
 
 [pypi-dependencies]
 torchaudio = ">=2.4.0, <3"
