--- a/aisafe_xgboost_one/pyproject.toml
+++ b/aisafe_xgboost_one/pyproject.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 dependencies = [
     "pandas", 
     "xgboost", 
-    "sklearn", 
+    "scikit-learn", 
     "numpy", 
     "scipy",                 
 ]
