--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,40 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["setuptools >= 40.8.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
-name = "aisafe"
-version = "0.0.1"
-description = "A backend leveraging gradient boosting machines and multimodal neural networks for early detection of child abuse"
-authors = [
-  { name = "bright-rookie" },
-]
+name = "aisafe_xgboost"                   
+version = "0.1.0"                     
+description = "An ensemble xgboost model made by bright-rookie."
 
 readme = "README.md"
+license = {file = "LICENSE"}
 classifiers = [
-    "Programming Language :: Python :: 3",
-    
+    "Development Status :: 3 - Alpha",
+    "Environment :: Console",
+    "Intended Audience :: Healthcare Industry",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: POSIX",
+    "Programming Language :: Python :: 3 :: Only",
+    "Topic :: Scientific/Engineering :: Bio-Informatics",
 ]
-requires-python = "~=3.10"
+keywords = ["child abuse", "gradient boosting machine"]
+dependencies = [
+    "pandas >= 2.2.0",
+    "xgboost >= 2.0.0",
+    "scikit-learn >= 1.3.0",
+    "numpy < 2.0.0", 
+    "scipy >= 1.13.1",                 
+]
+requires-python = ">=3.10"
 
-[tool.black]
-line-length = 99
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | \.venv
-)/
-'''
+[project.scripts]
+safe-train = "aisafe_xgboost.training:main"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["aisafe_xgboost*"]
+
+[project.urls]
+repository = "https://github.com/bright-rookie/aisafe_back"
